--- a/style.css
+++ b/style.css
@@ -24,16 +24,16 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 10;
+    z-index: 110;
 }
 
 #snowCanvasC {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 11;
+    z-index: 221;
 }
 
 .container {
