--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: 110;
+    pointer-events: none;
 }
 
 #snowCanvasC {
@@ -34,6 +35,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: 101;
+    pointer-events: none;
 }
 
 .container {
