--- a/style.css
+++ b/style.css
@@ -71,11 +71,14 @@ body {
     }
 }
 
-.profile-img {
+.img-cont{
+    background: url('IMG-20250319-WA0006.jpg') 0 0 no-repeat;
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    border: 3px solid white;
+    background-size: cover;
+    margin: 0 auto 20px auto;
+    border: 2px solid white;
 }
 
 .username {
